# svsm

./: 404.html  CODEOWNERS  Cargo.toml  Makefile  index.html
.github/: dependabot.yml
.github/workflows/: rust.yml
Documentation/: INSTALL.md
RELEASE-PROCESS/: index.html
aproxy/: Cargo.toml
bootlib/src/: igvm_params.rs  kernel_launch.rs  platform.rs
developer/ATTESTATION/: index.html
developer/CONTRIBUTING/: index.html
developer/DEVELOPMENT-PLAN/: index.html
developer/DOC-GUIDELINES/: index.html
developer/FUZZING/: index.html
developer/RUSTDOC-GUIDELINES/: index.html
developer/VERIFICATION/: index.html
igvmbuilder/src/: cmd_options.rs  gpa_map.rs  igvm_builder.rs  stage2_stack.rs
igvmmeasure/: Cargo.toml
installation/BUILD_RECIPES/: index.html
installation/INSTALL/: index.html
kernel/: Cargo.toml
kernel/src/: address.rs  attest.rs  efi_secrets.rs  error.rs  fw_meta.rs  lib.rs  raclients.rs  requests.rs  stage2.rs  svsm.rs  testing.rs
kernel/src/block/: virtio_blk.rs
kernel/src/cpu/: apic.rs  control_regs.rs  cpuid.rs  vmsa.rs
kernel/src/cpu/idt/: common.rs  svsm.rs
kernel/src/fs/: blockfs.rs  mod.rs
kernel/src/greq/: msg.rs  pld_report.rs  services.rs
kernel/src/mm/: address_space.rs  alloc.rs  guestmem.rs  mod.rs  page_memory.rs  page_visibility.rs
kernel/src/platform/: mod.rs  native.rs  snp.rs  tdp.rs
kernel/src/protocols/: custom.rs  mod.rs  vtpm.rs
kernel/src/sev/: ghcb.rs
kernel/src/virtio/: mod.rs
kernel/src/vmm/: execloop.rs
kernel/src/vtpm/: mod.rs
kernel/src/vtpm/mstpm/: mod.rs  wrapper.rs
kernel/src/vtpm/tcgtpm/: mod.rs  wrapper.rs
libmstpm/: Makefile  build.rs
libtcgtpm/: Makefile
rustdoc/: help.html  search-index.js  settings.html  src-files.js
rustdoc/search.index/: 002a232e733d.js  0070068e4299.js  007056d4e402.js  00acb858ff1a.js  00ae2bf52e8e.js  00b4697fd2f9.js  00bc94c31ee9.js  00cd49ebcd6a.js  00d9145c5d28.js  00eb985d69eb.js  0105ccc537d4.js  0111f4519bd4.js  0116d33d1762.js  0175f1851035.js  01ca1fcd425f.js  01cbfa3f2076.js  01e4b4f7dbf1.js  01e91bcb3161.js  020fdb4b0de6.js  0247d152968b.js  0283bcf1178a.js  028f1e434d93.js  031d900f771b.js  0330b82e5444.js  03427e24597f.js  037f7d189cfd.js  03a6cf345388.js  03b082cd457f.js  03d6c36b3653.js  0424236968f1.js  04936eed9cb1.js  049837b6c84b.js  04a99d5ac95d.js  04f19f4bf286.js  05001f1c24e4.js  050064143ca0.js  0505b2c66f5a.js  0535735af188.js  0535a1d621a6.js  0548174f0c3b.js  (+862 more)
rustdoc/stage2/: all.html  fn.check_launch_info.html  fn.get_svsm_config.html  fn.init_percpu.html  fn.load_elf_segment.html  fn.load_igvm_params.html  fn.load_kernel_elf.html  fn.map_and_validate.html  fn.panic.html  fn.prepare_heap.html  fn.setup_env.html  fn.setup_stage2_allocator.html  fn.shutdown_percpu.html  fn.stage2_main.html  index.html  static.ap_flag.html  static.pgtable.html
rustdoc/svsm/: all.html  index.html  macro.BIT.html  macro.BIT_MASK.html  macro.enable_shadow_stacks.html  macro.println.html  macro.ro_after_init_section.html  sidebar-items.js
scripts/: launch_guest.sh
scripts/container/: opensuse-rust.docker
src/: fw_meta.rs  kbc.rs  lib.rs  proxy.rs  svsm.rs
src/greq/: pld_report.rs  services.rs
src/mm/: address_space.rs  mod.rs  page_memory.rs
virtio-drivers/: Cargo.toml
virtio-drivers/src/: lib.rs  queue.rs
xbuild/: Cargo.toml
(+1876 files in other folders)
