[package]
name = "svsm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bitflags = "2.4"
gdbstub = { version = "0.6.6", default-features = false, optional = true }
gdbstub_arch = { version = "0.2.4", optional = true }
intrusive-collections = "0.9.6"
log = { version = "0.4.17", features = ["max_level_info", "release_max_level_info"] }
packit = { git = "https://github.com/coconut-svsm/packit", version = "0.1.0" }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
rand_chacha = { version = "0.3.1", default-features = false, optional = true}
reference-kbc = { git = "https://github.com/stefano-garzarella/reference-kbc", version = "0.1.0", default-features = false, features = ["alloc"], optional = true }
rsa = { version = "0.9.3", default-features = false, optional = true }
sha2 = { version = "0.10.8", default-features = false, features = ["force-soft"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true}
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }

[target."x86_64-unknown-none".dev-dependencies]
test = { version = "0.1.0", path = "test" }

[features]
default = ["enable-stacktrace", "kbc"] #TODO: remove kbc
enable-stacktrace = []
enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
kbc = ["dep:reference-kbc", "dep:rand_chacha", "dep:rsa", "dep:sha2", "dep:serde_json", "dep:hex" ]
