[package]
name = "svsm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
elf.workspace = true
syscall.workspace = true

aes-gcm = { workspace = true, features = ["aes", "alloc"] }
bitfield-struct.workspace = true
bitflags.workspace = true
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }
igvm_defs = { workspace = true, features = ["unstable"] }
intrusive-collections.workspace = true
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
packit.workspace = true
libmstpm = { workspace = true, optional = true }
# raclients dependecies
rand_chacha = { workspace = true, optional = true}
raclients = { workspace = true, features = ["alloc", "reference_kbs"], optional = true }
rsa = { workspace = true, optional = true }
sha2 = { workspace = true, features = ["force-soft"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true}
hex = { workspace = true, features = ["alloc"], optional = true }
rdrand = { workspace = true, optional = true }

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[features]
default = ["mstpm", "raclients"] #TODO: remove raclients
enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
raclients = ["dep:raclients", "dep:rand_chacha", "dep:rsa", "dep:sha2", "dep:serde_json", "dep:hex", "dep:rdrand"]
mstpm = ["dep:libmstpm"]

[dev-dependencies]

[lints]
workspace = true
